--- a/1Introduction to Generative AI and Large Language Models/githubmodels-assignment.ipynb
+++ b/1Introduction to Generative AI and Large Language Models/githubmodels-assignment.ipynb
@@ -178,7 +178,7 @@
       },
       "source": [
         "### 3. Finding the right model  \n",
-        "The GPT-3.5-turbo or GPT-4 models can understand and generate natural language."
+        "The GPT-4o models can understand and generate natural language."
       ]
     },
     {
