--- a/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
+++ b/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Note: This notebook requires Python 3.11. You can download from here https://www.python.org/ftp/python/3.11.0/python-3.11.0rc2-amd64.exe\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -151,24 +159,7 @@
     "pc = Pinecone(api_key=api_key)\n",
     "\n",
     "# List indexes to check connectivity\n",
-    "print(\"Available indexes:\", pc.list_indexes().names())\n",
-    "\n",
-    "# Create (or connect to) your Pinecone index if it doesn't exist\n",
-    "if index_name not in pc.list_indexes().names():\n",
-    "    pc.create_index(\n",
-    "        name=index_name,\n",
-    "        dimension=1536,  \n",
-    "        metric=\"cosine\",\n",
-    "        spec=ServerlessSpec(\n",
-    "            cloud=\"aws\",\n",
-    "            region=\"us-east-1\"  \n",
-    "        )\n",
-    "    )\n",
-    "    print(f\"Created index: {index_name}\")\n",
-    "else:\n",
-    "    print(f\"Index '{index_name}' already exists.\")\n",
-    "\n",
-    "\n"
+    "print(\"Available indexes:\", pc.list_indexes().names())\n"
    ]
   },
   {
@@ -229,6 +220,16 @@
     "# Load the QA chain\n",
     "chain = load_qa_chain(llm, chain_type=\"stuff\")\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "# Define your query\n",
     "query = \"What is the engine size of the Toyota Corolla Cross?\"\n",
     "#What is the estimated fuel efficiency of the Corolla Cross Hybrid?\n",
@@ -245,8 +246,7 @@
     "# Get the answer from the chain\n",
     "result = chain.run(input_documents=docs, question=query)\n",
     "\n",
-    "print(f\"Answer: \\n\\n{result}\")\n",
-    "\n"
+    "print(f\"Answer: \\n\\n{result}\")\n"
    ]
   }
  ],
