--- a/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
+++ b/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
@@ -110,14 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "pdf_path = \"./docs/corollacross_brochure.pdf\"  # Adjust the file path if needed\n",
-    "loader = PyPDFLoader(pdf_path)\n",
-    "documents = loader.load()\n",
-    "\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=100)\n",
-    "docs = text_splitter.split_documents(documents)\n",
-    "print(f\"Loaded {len(documents)} document(s) and split into {len(docs)} chunks.\")"
+    "# Your code here\n"
    ]
   },
   {
@@ -160,7 +153,7 @@
     "\n",
     "# Replace these values as needed\n",
     "api_key = \"YOUR_PINECONE_API_KEY\" \n",
-    "index_name = \"langchain-demo\"\n",
+    "index_name = \"assignment4\"\n",
     "\n",
     "# Create an instance of the Pinecone class using the new API\n",
     "\n",
@@ -242,6 +235,24 @@
     "    deployment_name=os.environ.get(\"AZURE_OPENAI_GPT4_MODEL_NAME\", \"gpt-4o\")\n",
     ")\n",
     "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 8: Load the QA chain and run the query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 8: Load the QA chain and run the query\n",
     "# Load the QA chain\n",
     "chain = load_qa_chain(llm, chain_type=\"stuff\")\n",
     "\n",
@@ -252,32 +263,42 @@
     "# Retrieve similar documents from the vector store (removed include_metadata)\n",
     "docs = vector_store.similarity_search(query)\n",
     "\n",
-    "# Optionally, access metadata from the documents if needed\n",
-    "for doc in docs:\n",
-    "    print(\"Metadata:\", doc.metadata)\n",
-    "\n",
-    "\n",
-    "\n",
     "# Get the answer from the chain\n",
     "result = chain.run(input_documents=docs, question=query)\n",
     "\n",
-    "print(f\"Answer: \\n\\n{result}\")\n",
-    "\n"
+    "print(f\"Answer: \\n\\n{result}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 8: Test Your RAG System\n",
+    "### Step 9: Test Your RAG System\n",
     "\n",
     "Test your Retrieval Augmented Generation system using the following questions. For each question, replace the `query` variable in the previous cell and run it to see how well your system retrieves and answers based on the document content:\n",
     "\n",
-    "1. What is Contoso Electronics' mission statement?\n",
-    "2. How can employees report unethical or illegal conduct confidentially?\n",
-    "3. What are the key elements of the company's Workplace Safety Program?\n",
-    "4. How often are employee performance reviews conducted?\n",
-    "5. What data security practices must employees follow when handling customer information?\n"
+    "1. How can employees report unethical or illegal conduct confidentially?\n",
+    "2. How often are employee performance reviews conducted?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "#  How can employees report unethical or illegal conduct confidentially?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Youe code here\n",
+    "# How often are employee performance reviews conducted?"
    ]
   }
  ],
