--- a/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
+++ b/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "### Note: This notebook requires Python 3.11. You can download from here https://www.python.org/ftp/python/3.11.0/python-3.11.0rc2-amd64.exe\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Retrieval-Augmented Generation (RAG) for question answering using PDF documents"
    ]
   },
