--- a/1Introduction to Generative AI and Large Language Models/embeddings_Demo.ipynb
+++ b/1Introduction to Generative AI and Large Language Models/embeddings_Demo.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "# Azure OpenAI configuration\n",
-    "api_key = \"Replace with your OpenAI API key\" #Use this key: BjSM1Dwo5UZVvPUizHw8w0n8i7TM3fHIK3GjbeIYX5Z1nqffyiCBJQQJ99BBACYeBjFXJ3w3AAABACOGRhVh\n",
-    "api_base = \"https://khipus-aoai.openai.azure.com\"\n",
+    "api_key = \"Replace with your OpenAI API key\" #key from the Azure OpenAI resource\n",
+    "api_base = \"https://khipus-aoai.openai.azure.com\"#https://azure-openai-<your-resource-name>.openai.azure.com/\n",
     "deployment = \"text-embedding-ada-002\"  # your deployment name/model name\n",
     "api_version = \"2023-05-15\"\n"
    ]
