--- a/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
+++ b/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
@@ -77,8 +77,8 @@
    "outputs": [],
    "source": [
     "# Step 2: Read Pinecone and Azure OpenAI Environment Variables\n",
-    "os.environ[\"AZURE_OPENAI_API_KEY\"] = \"YOUR_AZURE_OPENAI_API_KEY\" #BjSM1Dwo5UZVvPUizHw8w0n8i7TM3fHIK3GjbeIYX5Z1nqffyiCBJQQJ99BBACYeBjFXJ3w3AAABACOGRhVh\n",
-    "os.environ[\"AZURE_OPENAI_API_BASE\"] = \"YOUR_AZURE_OPENAI_ENDPOINT\"#https://khipus-aoai.openai.azure.com\n",
+    "os.environ[\"AZURE_OPENAI_API_KEY\"] = \"YOUR_AZURE_OPENAI_API_KEY\" #key from the Azure OpenAI resource\n",
+    "os.environ[\"AZURE_OPENAI_API_BASE\"] = \"YOUR_AZURE_OPENAI_ENDPOINT\"#https://azure-openai-<your-resource-name>.openai.azure.com/\n",
     "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"text-embedding-ada-002\"\n",
     "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"2023-05-15\"\n",
     "\n",
