--- a/4LLM_Evaluation_and_Security/llm_evaluation_Case_Study.ipynb
+++ b/4LLM_Evaluation_and_Security/llm_evaluation_Case_Study.ipynb
@@ -82,8 +82,8 @@
             "source": [
                 "\n",
                 "model_config = AzureOpenAIModelConfiguration(\n",
-                "    azure_endpoint=\"replace with your endpoint\",# https://ai-snikjou6391ai635527044564.openai.azure.com/\n",
-                "    api_key=\"replace with your key\",# 9Nc9MkokOOXJw8iaaPzuvi3t4GgROh9qLhffXV0EQke2q0DNKGB5JQQJ99BCACHYHv6XJ3w3AAAAACOGoYyZ\n",
+                "    azure_endpoint=\"replace with your endpoint\",# https://azure-openai-<your-resource-name>.openai.azure.com/\n",
+                "    api_key=\"replace with your key\",# key from the Azure OpenAI resource\n",
                 "    azure_deployment=\"gpt-4.1-mini\",\n",
                 "    api_version=\"2023-05-15\"  \n",
                 ")\n"
