--- a/4LLM_Evaluation_and_Security/llm_evaluation_Case_Study.ipynb
+++ b/4LLM_Evaluation_and_Security/llm_evaluation_Case_Study.ipynb
@@ -5,8 +5,7 @@
             "metadata": {},
             "source": [
                 "# Khipus.ai\n",
-                "## Retrieval Augmented Generation\n",
-                "### Case Study: LLM Evaluation Tutorial using Azure AI Evaluation SDK\n",
+                "### Assignment 5: Qualitative Metrics for LLM Evaluation Using the Azure AI Evaluation SDK\n",
                 "### Azure OpenAI + Azure AI Evaluation SDK\n",
                 "<span>© Copyright Notice 2025, Khipus.ai - All Rights Reserved.</span>"
             ]
@@ -23,6 +22,22 @@
                 "- **Groundedness**: Evaluates the accuracy of the information provided in the response.\n",
                 "- **Relevance**: Determines how well the response addresses the query.\n",
                 "- **Retrieval**: Measures the effectiveness of the model in retrieving relevant information."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "\n",
+                "### Explanation of the Assignment Seccion\n",
+                "\n",
+                "The assignment section focuses on evaluating the groundedness of LLM responses using the Azure AI Evaluation SDK. Specifically, it challenges you to:\n",
+                "\n",
+                "- Identify factual inaccuracies by modifying an example response.\n",
+                "- Simulate scenarios with subtle or multiple errors in a response.\n",
+                "\n",
+                "\n",
+                "This exercise emphasizes the importance of precise factual information in model responses and demonstrates how nuanced errors can impact evaluation metrics. "
             ]
         },
         {
@@ -276,6 +291,37 @@
                 "\n",
                 "score = retrieval_eval(query=query, response=response, context=context)\n",
                 "print(\"Retrieval score:\", score)\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Assignment\n",
+                "\n",
+                "### Groundedness Evaluation: \n",
+                "In the groundedness example, the response incorrectly lists Pluto as a planet. Modify the example to test a different type of factual error and explain how the groundedness score might change when the error is more subtle or when multiple errors are present in a longer response"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Your code here\n",
+                "# Create a groundedness evaluator\n",
+                "groundedness_eval = GroundednessEvaluator(model_config)\n",
+                "\n",
+                "# Example with a more subtle factual error\n",
+                "query = \"When did the first moon landing occur?\"\n",
+                "response = \"The first moon landing was achieved by Neil Armstrong and Buzz Aldrin on July 21, 1969, when Apollo 11 landed on the lunar surface.\"\n",
+                "context = \"NASA's Apollo 11 mission successfully landed the first humans on the Moon on July 20, 1969. Neil Armstrong and Buzz Aldrin stepped onto the lunar surface while Michael Collins orbited above.\"\n",
+                "\n",
+                "# Evaluate groundedness with context\n",
+                "result = groundedness_eval(query=query, response=response, context=context)\n",
+                "print(\"Groundedness Score:\", result['groundedness'])\n",
+                "print(\"Explanation:\", result['groundedness_reason'])"
             ]
         },
         {
