Refactor Pinecone integration and update requirements
Replaced deprecated Pinecone imports with langchain_pinecone.PineconeVectorStore in RAG notebooks, updated environment variable usage, and improved index creation logic. Added langchain_pinecone to requirements.txt and created a .gitignore for venv. These changes modernize Pinecone usage and streamline document embedding workflows.

--- a/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
+++ b/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,10 @@
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_openai import AzureOpenAIEmbeddings\n",
-    "from langchain.vectorstores import Pinecone as PineconeVectorStore\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
     "from langchain.llms import OpenAI\n",
     "from pinecone import Pinecone, ServerlessSpec\n",
-    "from langchain.vectorstores import Pinecone as PineconeVectorStore\n",
     "from langchain.chat_models import AzureChatOpenAI"
    ]
   },
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +80,7 @@
     "os.environ[\"AZURE_OPENAI_API_BASE\"] = \"YOUR_AZURE_OPENAI_ENDPOINT\"#https://azure-openai-<your-resource-name>.openai.azure.com/\n",
     "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"text-embedding-ada-002\"\n",
     "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"2023-05-15\"\n",
+    "os.environ[\"PINECONE_API_KEY\"] = \"your-pinecone-key\" #key from the Pinecone resource\n",
     "\n",
     "openai.api_key = os.environ[\"AZURE_OPENAI_API_KEY\"]\n",
     "openai.api_base = os.environ[\"AZURE_OPENAI_API_BASE\"]\n",
@@ -98,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 23 document(s) and split into 78 chunks.\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Load your PDF and split into chunks\n",
     "pdf_path = \"./docs/corollacross_brochure.pdf\"  # Adjust the file path if needed\n",
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,21 +146,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: Generate embeddings for each chunk"
+    "### Step 5: Connect to Pinecone Client and get all availible indexes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available indexes: ['langchain-demo2', 'langchain-demo']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 5: Generate embeddings for each chunk\n",
-    "pinecone.Index = pinecone.data.index.Index\n",
     "\n",
     "# Replace these values as needed\n",
-    "api_key = \"YOUR_PINECONE_API_KEY\" \n",
-    "index_name = \"langchain-demo\"\n",
+    "api_key = \"your-pinecone-key\" \n",
     "\n",
     "# Create an instance of the Pinecone class using the new API\n",
     "\n",
@@ -166,29 +179,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 6 Create and store embeddings using the PineconeVectorStore"
+    "### Step 6: Create index if you havent, it doesnt create if it already exists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6 Create and store embeddings using the PineconeVectorStore\n",
-    "# Retrieve the index client\n",
-    "index = pc.Index(index_name)\n",
+    "index_name = \"langchain-demo2\"\n",
     "\n",
+    "if not pc.has_index(index_name):\n",
+    "    pc.create_index_for_model(\n",
+    "        name=index_name,\n",
+    "        cloud=\"aws\",\n",
+    "        region=\"us-east-1\",\n",
+    "        embed={\n",
+    "            \"model\":\"text-embedding-3-small\",\n",
+    "            \"field_map\":{\"text\": \"chunk_text\"}\n",
+    "        }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 7 Create and store embeddings using the PineconeVectorStore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings have been successfully stored in Pinecone!\n"
+     ]
+    }
+   ],
+   "source": [
     "# Create and store embeddings using the PineconeVectorStore\n",
-    "vector_store = PineconeVectorStore(\n",
-    "    index,         # The instance of pinecone.Index\n",
-    "    embeddings,    # Your initialized embeddings object (Azure OpenAI embeddings)\n",
-    "    text_key=\"text\",  # Adjust if your documents use a different key\n",
-    "    namespace=\"default\"\n",
-    ")\n",
+    "\n",
+    "index_name = \"langchain-demo2\"\n",
+    "\n",
+    "vectorstore = PineconeVectorStore(\n",
+    "    index_name=index_name, \n",
+    "    embedding=embeddings\n",
+    "    )\n",
     "\n",
     "# Assuming 'docs' contains your document chunks\n",
-    "vector_store.add_documents(docs)\n",
+    "vectorstore.add_documents(docs)\n",
     "\n",
     "print(\"Embeddings have been successfully stored in Pinecone!\")"
    ]
@@ -202,9 +247,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_18524\\663328907.py:4: LangChainDeprecationWarning: The class `AzureChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import AzureChatOpenAI``.\n",
+      "  llm = AzureChatOpenAI(\n",
+      "c:\\Users\\Usuario\\Documents\\GitHub\\Generative_AI\\venv\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:174: UserWarning: As of openai>=1.0.0, Azure endpoints should be specified via the `azure_endpoint` param not `openai_api_base` (or alias `base_url`). Updating `openai_api_base` from https://khipus-aoai.openai.azure.com to https://khipus-aoai.openai.azure.com/openai.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Usuario\\Documents\\GitHub\\Generative_AI\\venv\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:181: UserWarning: As of openai>=1.0.0, if `deployment_name` (or alias `azure_deployment`) is specified then `openai_api_base` (or alias `base_url`) should not be. Instead use `deployment_name` (or alias `azure_deployment`) and `azure_endpoint`.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Usuario\\Documents\\GitHub\\Generative_AI\\venv\\Lib\\site-packages\\langchain_community\\chat_models\\azure_openai.py:189: UserWarning: As of openai>=1.0.0, if `openai_api_base` (or alias `base_url`) is specified it is expected to be of the form https://example-resource.azure.openai.com/openai/deployments/example-deployment. Updating https://khipus-aoai.openai.azure.com to https://khipus-aoai.openai.azure.com/openai.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_18524\\663328907.py:13: LangChainDeprecationWarning: This class is deprecated. See the following migration guides for replacements based on `chain_type`:\n",
+      "stuff: https://python.langchain.com/docs/versions/migrating_chains/stuff_docs_chain\n",
+      "map_reduce: https://python.langchain.com/docs/versions/migrating_chains/map_reduce_chain\n",
+      "refine: https://python.langchain.com/docs/versions/migrating_chains/refine_chain\n",
+      "map_rerank: https://python.langchain.com/docs/versions/migrating_chains/map_rerank_docs_chain\n",
+      "\n",
+      "See also guides on retrieval and question-answering here: https://python.langchain.com/docs/how_to/#qa-with-rag\n",
+      "  chain = load_qa_chain(llm, chain_type=\"stuff\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 7: Perform a similarity search and retrieve the most relevant documents\n",
     "\n",
@@ -225,9 +293,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata: {'creationdate': '2024-01-17T14:56:22-05:00', 'creator': 'Adobe InDesign 18.5 (Macintosh)', 'moddate': '2024-01-17T14:57:41-05:00', 'page': 2.0, 'page_label': '3', 'producer': 'Adobe PDF Library 17.0', 'source': './docs/corollacross_brochure.pdf', 'total_pages': 23.0, 'trapped': '/False'}\n",
+      "Metadata: {'creationdate': '2024-01-17T14:56:22-05:00', 'creator': 'Adobe InDesign 18.5 (Macintosh)', 'moddate': '2024-01-17T14:57:41-05:00', 'page': 2.0, 'page_label': '3', 'producer': 'Adobe PDF Library 17.0', 'source': './corollacross_brochure.pdf', 'total_pages': 23.0, 'trapped': '/False'}\n",
+      "Metadata: {'creationdate': '2024-01-17T14:56:22-05:00', 'creator': 'Adobe InDesign 18.5 (Macintosh)', 'moddate': '2024-01-17T14:57:41-05:00', 'page': 1.0, 'page_label': '2', 'producer': 'Adobe PDF Library 17.0', 'source': './corollacross_brochure.pdf', 'total_pages': 23.0, 'trapped': '/False'}\n",
+      "Metadata: {'creationdate': '2024-01-17T14:56:22-05:00', 'creator': 'Adobe InDesign 18.5 (Macintosh)', 'moddate': '2024-01-17T14:57:41-05:00', 'page': 1.0, 'page_label': '2', 'producer': 'Adobe PDF Library 17.0', 'source': './docs/corollacross_brochure.pdf', 'total_pages': 23.0, 'trapped': '/False'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Usuario\\AppData\\Local\\Temp\\ipykernel_18524\\550836211.py:15: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result = chain.run(input_documents=docs, question=query)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer: \n",
+      "\n",
+      "The Toyota Corolla Cross features a 2.0-liter engine.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Define your query\n",
@@ -235,7 +331,7 @@
     "#What is the estimated fuel efficiency of the Corolla Cross Hybrid?\n",
     "\n",
     "# Retrieve similar documents from the vector store (removed include_metadata)\n",
-    "docs = vector_store.similarity_search(query)\n",
+    "docs = vectorstore.similarity_search(query)\n",
     "\n",
     "# Optionally, access metadata from the documents if needed\n",
     "for doc in docs:\n",
@@ -266,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
