--- a/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
+++ b/3Retrieval_Augmented_Generation/3RAG_ Assignment4.ipynb
@@ -56,11 +56,10 @@
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_openai import AzureOpenAIEmbeddings\n",
-    "from langchain.vectorstores import Pinecone as PineconeVectorStore\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
     "from langchain.llms import OpenAI\n",
     "from pinecone import Pinecone, ServerlessSpec\n",
-    "from langchain.vectorstores import Pinecone as PineconeVectorStore\n",
     "from langchain.chat_models import AzureChatOpenAI"
    ]
   },
@@ -82,6 +81,8 @@
     "os.environ[\"AZURE_OPENAI_API_BASE\"] = \"YOUR_AZURE_OPENAI_ENDPOINT\"#https://azure-openai-<your-resource-name>.openai.azure.com/\n",
     "os.environ[\"AZURE_OPENAI_DEPLOYMENT\"] = \"text-embedding-ada-002\"\n",
     "os.environ[\"AZURE_OPENAI_API_VERSION\"] = \"2023-05-15\"\n",
+    "os.environ[\"PINECONE_API_KEY\"] = \"your-pinecone-key\" #key from the Pinecone resource\n",
+    "\n",
     "\n",
     "openai.api_key = os.environ[\"AZURE_OPENAI_API_KEY\"]\n",
     "openai.api_base = os.environ[\"AZURE_OPENAI_API_BASE\"]\n",
@@ -147,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5: Generate embeddings for each chunk"
+    "### Step 5: Connect to Pinecone Client and create Index if doesnt exist"
    ]
   },
   {
@@ -156,8 +157,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Generate embeddings for each chunk\n",
-    "pinecone.Index = pinecone.data.index.Index\n",
     "\n",
     "# Replace these values as needed\n",
     "api_key = \"YOUR_PINECONE_API_KEY\" \n",
@@ -202,19 +201,15 @@
    "outputs": [],
    "source": [
     "# Step 6 Create and store embeddings using the PineconeVectorStore\n",
-    "# Retrieve the index client\n",
-    "index = pc.Index(index_name)\n",
     "\n",
     "# Create and store embeddings using the PineconeVectorStore\n",
-    "vector_store = PineconeVectorStore(\n",
-    "    index,         # The instance of pinecone.Index\n",
-    "    embeddings,    # Your initialized embeddings object (Azure OpenAI embeddings)\n",
-    "    text_key=\"text\",  # Adjust if your documents use a different key\n",
-    "    namespace=\"default\"\n",
-    ")\n",
+    "vectorstore = PineconeVectorStore(\n",
+    "    index_name=index_name, \n",
+    "    embedding=embeddings\n",
+    "    )\n",
     "\n",
     "# Assuming 'docs' contains your document chunks\n",
-    "vector_store.add_documents(docs)\n",
+    "vectorstore.add_documents(docs)\n",
     "\n",
     "print(\"Embeddings have been successfully stored in Pinecone!\")"
    ]
@@ -269,9 +264,8 @@
     "#How often are employee performance reviews conducted?\n",
     "\n",
     "# Retrieve similar documents from the vector store (removed include_metadata)\n",
-    "docs = vector_store.similarity_search(query)\n",
-    "\n",
-    "# Get the answer from the chain\n",
+    "docs = vector_store.\n",
+    "# Get the answer from the t\n",
     "result = chain.run(input_documents=docs, question=query)\n",
     "\n",
     "print(f\"Answer: \\n\\n{result}\")"
