--- a/4LLM_Evaluation_and_Security/2llm_evaluation_Assignment5.ipynb
+++ b/4LLM_Evaluation_and_Security/2llm_evaluation_Assignment5.ipynb
@@ -7,8 +7,7 @@
                 "# Khipus.ai\n",
                 "### Assignment 5: Qualitative Metrics for LLM Evaluation Using the Azure AI Evaluation SDK\n",
                 "### Azure OpenAI + Azure AI Evaluation SDK\n",
-                "### Name: (Your Name)",
-
+                "### Name: (Your Name)\n",
                 "<span>© Copyright Notice 2025, Khipus.ai - All Rights Reserved.</span>"
             ]
         },
