--- a/4LLM_Evaluation_and_Security/2llm_evaluation_Assignment5.ipynb
+++ b/4LLM_Evaluation_and_Security/2llm_evaluation_Assignment5.ipynb
@@ -332,7 +332,7 @@
             },
             "source": [
                 "## Conclusion\n",
-                "In this case study, we have evaluated LLM responses using the Azure AI Evaluation SDK across various metrics: Coherence, Fluency, Groundedness, Relevance, and Retrieval. You can use these metrics to assess and improve the performance of your LLM applications."
+                "In this Assignment, we have evaluated LLM responses using the Azure AI Evaluation SDK across various metrics: Coherence, Fluency, Groundedness, Relevance, and Retrieval. You can use these metrics to assess and improve the performance of your LLM applications."
             ]
         }
     ],
