--- a/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
+++ b/3Retrieval_Augmented_Generation/2Case_Study_RAG.ipynb
@@ -184,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "index_name = \"langchain-demo2\"\n",
     "\n",
     "if not pc.has_index(index_name):\n",
-    "    pc.create_index_for_model(\n",
-    "        name=index_name,\n",
+    "    pc.create_index(\n",
+    "    name=index_name,\n",
+    "    dimension=1536, # The text-embedding-ada-0002 model has 1536 dimensions\n",
+    "    metric=\"cosine\", # Cosine is the it's one of the most common distance metrics used with text embeddings like text-embedding-ada-0002.\n",
+    "    spec=ServerlessSpec(\n",
     "        cloud=\"aws\",\n",
-    "        region=\"us-east-1\",\n",
-    "        embed={\n",
-    "            \"model\":\"text-embedding-3-small\",\n",
-    "            \"field_map\":{\"text\": \"chunk_text\"}\n",
-    "        }\n",
-    "    )"
+    "        region=\"us-east-1\"\n",
+    "    ) \n",
+    ")"
    ]
   },
   {
